# rust-picipolo

./: Cargo.toml
src/: data.rs  game.rs  game_judge.rs  main.rs  view.rs
src/game_logic/: mod.rs  tests.rs
