[package]
name = "rust-picipolo"
version = "0.1.0"
authors = ["Piotr Przestrzelski <piotr.przestrzelski@daftmobile.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"

[[bin]]
name = "rust-picipolo"
path = "src/main.rs"
